# observ-viz

./: .dockerignore  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  catalog-info.yaml  docker-compose.apps.yml  docker-compose.yml  g.libsonnet  index.html  justfile  main.libsonnet  mkdocs.yml
alert/: main.libsonnet  rule.libsonnet  signals.libsonnet
api/: index.html
backstage/: index.html  observ-viz-catalog.yaml
capabilities/: index.html
concepts/: index.html
config/: config.libsonnet  manifest.libsonnet
custom/: annotation.libsonnet  dashboard.libsonnet  element.libsonnet  layout.libsonnet  panel.libsonnet  panelBase.libsonnet  query.libsonnet  queryBase.libsonnet  variable.libsonnet
deploy/: annotations.libsonnet  main.libsonnet  panels.libsonnet
docker/: Dockerfile  entrypoint.sh  index.html
docs/: api.md  backstage.md  capabilities.md  collectors.md  concepts.md  docker.md  examples.md  index.md  libs.md  packs.md  panels.md  reference.md  render.md  usage.md
examples/: alerts-overview.jsonnet  doom-iframe.jsonnet  doom.jsonnet  doom_render.json  golang-pack.jsonnet  index.html  library-panels.jsonnet  linux-pack.jsonnet  minimal-grid.jsonnet  prometheus-pack.jsonnet  red-dashboard.jsonnet
exporters/: index.html
generator/: pyproject.toml
generator/observ_viz_gen/: __init__.py  cli.py  emit.py  generate.py  manifest.py  model.py  schema.py  schema_emit.py  validate.py
generator/schemas/: SOURCES.md
generator/tests/: test_parity.py
libs/: index.html  observ-libs.libsonnet
libs/salt-observ-lib/alloy-engine/: README.md  setup.cfg
libs/salt-observ-lib/alloy-engine/src/saltext/alloy/engines/: alloy.py
logs/: main.libsonnet  panels.libsonnet  query.libsonnet  signals.libsonnet
observ-libs/: index.html
packs/: _pack.libsonnet  index.html  (+1 more)
(+386 files in other folders)
