[metadata]
name = saltext.alloy
version = attr: saltext.alloy.version.__version__
description = Salt engine to send events to Grafana Alloy (loki.source.api)
long_description = file: README.md
long_description_content_type = text/markdown
author = salt-observ-lib
keywords = salt-extension
url = https://github.com/cznewt/observ-viz/
project_urls =
    Source=https://github.com/cznewt/observ-viz/
    Tracker=https://github.com/cznewt/observ-viz/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = False
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  wheel
  setuptools>=50.3.2
install_requires =
  salt>=3003
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.alloy = saltext.alloy

[sdist]
owner = root
group = root
